GNOME Bugzilla – Bug 695711
Stacking is broken during workspace switch effects
Last modified: 2013-03-12 16:59:18 UTC
Take gnome-shell master. Use alt-tab to switch to an app which was in the background on a different workspace. You'll notice that the workspace switch happens with the old stacking, ie you see the app that was previously in the foreground on the top, and then you see the right app raised at the end of animation. This is a fallout from deprecated clutter API porting.
Created attachment 238704 [details] [review] Compositor: sync stacking of window actors even if they're not parented to the window groups Window actors might be temporarily parented to intermediate actors during effect, but we should not require that the plugin keeps track of stacking. Rather, assume that the intermediate groups holds a whole stack, and applying position within it.
Review of attachment 238704 [details] [review]: I don't like the approach, but it matches what we had before, and it works.
*** Bug 695463 has been marked as a duplicate of this bug. ***
Attachment 238704 [details] pushed as 889844b - Compositor: sync stacking of window actors even if they're not parented to the window groups